exercise-5.2/manifests/productpage-waypoint.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-waypoint
  namespace: default
spec:
  targetRefs:
    - group: ''
      kind: Service
      name: productpage
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/curl
      to:
        - operation:
            methods: [GET]
